unpackaged/objects/Low_Ink__e.object
<CustomObject>
    <description>Low Ink event allow to detect when printer ink goes under a given threshold and triggers a new ink order</description>
    <fields>
        <fullName>Ink_level__c</fullName>
        <label>Ink level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printer_Model__c</fullName>
        <label>Printer Model</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>measure_date__c</fullName>
        <label>measure date</label>
        <type>DateTime</type>
    </fields>
    <label>Low Ink</label>
    <pluralLabel>Low Inks</pluralLabel>
</CustomObject>